# hachathone2-phase2-nextjs

./: .env  .env.example  .gitignore  APP_OVERVIEW.md  CLAUDE.md  Constitution.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile.backend  Dockerfile.frontend  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  README.md  STARTUP_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  cleanup_repo.ps1  comprehensive_test.py  docker-compose.yml  functional_test.py  package-lock.json  pyproject.toml  requirements.txt  run.bat  run.sh  task_01_backend_scaffolding.md  task_02_database_connection.md  task_03_task_model_crud.md  task_04_jwt_middleware.md  task_05_rest_api_endpoints.md  task_06_frontend_structure.md  task_07_auth_ui.md  task_08_frontend_api_client.md  task_09_task_management_ui.md  task_10_integration_testing.md  test_app.py  test_backend.py  test_comprehensive.py  test_connectivity.py  test_functionality.py  (+1 more)
.claude/: settings.local.json
.spec-kit/: config.yaml
app.bak_moved/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  .env  .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  chat_test.py  create_anonymous_user.py  create_demo_user.py  curl_test.json  database.py  debug_users_final.py  dependencies.py  final_check.py  fix_db_schema.py  force_reset_password.py  init_phase3_db.py  main.py  mcp_server.py  models.py  pyproject.toml  render.yaml  requirements.txt  reset_demo_user.py  run.py  schemas.py  settings.py  test_api.py  test_db.py  test_endpoint.py  test_login_diagnostic.py  test_main.py  test_phase3_acceptance.py  verify_db.py
(+184 files in other folders)
